// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useNotificationBanners Nested Notification Banner Provider registers notification banner with top-level Banner Provider 1`] = `
<div>
  <div>
    <button
      data-testid="show-banner"
      type="button"
    >
      Toggle Notification Banner
    </button>
    <div>
      <button
        data-testid="show-2nd-banner"
        type="button"
      >
        Toggle Notification Banner
      </button>
    </div>
  </div>
</div>
`;

exports[`useNotificationBanners Nested Notification Banner Provider registers notification banner with top-level Banner Provider 2`] = `
<div>
  <div
    aria-live="polite"
  >
    <div
      class="alert-base error narrow"
      data-terra-application-notification-banner="error"
      role="alert"
    >
      <div
        class="body body-std"
      >
        <span
          class="icon"
        >
          <svg
            aria-hidden="true"
            class="tui-Icon icon IconError"
            focusable="false"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
              fill="#E50000"
            />
            <path
              d="M7 21.5h34v5H7v-5z"
              fill="#FFF"
            />
          </svg>
        </span>
        <div
          class="section"
        >
          <strong
            class="title"
          >
            <span>
              Error.
            </span>
          </strong>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      data-testid="show-banner"
      type="button"
    >
      Toggle Notification Banner
    </button>
    <div>
      <button
        data-testid="show-2nd-banner"
        type="button"
      >
        Toggle Notification Banner
      </button>
    </div>
  </div>
</div>
`;

exports[`useNotificationBanners Nested Notification Banner Provider registers notification banner with top-level Banner Provider 3`] = `
<div>
  <div
    aria-live="polite"
  >
    <div
      class="alert-base error narrow"
      data-terra-application-notification-banner="error"
      role="alert"
    >
      <div
        class="body body-std"
      >
        <span
          class="icon"
        >
          <svg
            aria-hidden="true"
            class="tui-Icon icon IconError"
            focusable="false"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
              fill="#E50000"
            />
            <path
              d="M7 21.5h34v5H7v-5z"
              fill="#FFF"
            />
          </svg>
        </span>
        <div
          class="section"
        >
          <strong
            class="title"
          >
            <span>
              Error.
            </span>
          </strong>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      data-testid="show-banner"
      type="button"
    >
      Toggle Notification Banner
    </button>
    <div
      aria-live="polite"
    >
      <div
        class="alert-base error narrow"
        data-terra-application-notification-banner="error"
        role="alert"
      >
        <div
          class="body body-std"
        >
          <span
            class="icon"
          >
            <svg
              aria-hidden="true"
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </span>
          <div
            class="section"
          >
            <strong
              class="title"
            >
              <span>
                Error.
              </span>
            </strong>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        data-testid="show-2nd-banner"
        type="button"
      >
        Toggle Notification Banner
      </button>
    </div>
  </div>
</div>
`;

exports[`useNotificationBanners Nested Notification Banner Provider unregisters banner with top-level Banner Provider 1`] = `
<div>
  <div
    aria-live="polite"
  >
    <div
      class="alert-base error narrow"
      data-terra-application-notification-banner="error"
      role="alert"
    >
      <div
        class="body body-std"
      >
        <span
          class="icon"
        >
          <svg
            aria-hidden="true"
            class="tui-Icon icon IconError"
            focusable="false"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
              fill="#E50000"
            />
            <path
              d="M7 21.5h34v5H7v-5z"
              fill="#FFF"
            />
          </svg>
        </span>
        <div
          class="section"
        >
          <strong
            class="title"
          >
            <span>
              Error.
            </span>
          </strong>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      data-testid="show-banner"
      type="button"
    >
      Toggle Notification Banner
    </button>
    <div
      aria-live="polite"
    >
      <div
        class="alert-base error narrow"
        data-terra-application-notification-banner="error"
        role="alert"
      >
        <div
          class="body body-std"
        >
          <span
            class="icon"
          >
            <svg
              aria-hidden="true"
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </span>
          <div
            class="section"
          >
            <strong
              class="title"
            >
              <span>
                Error.
              </span>
            </strong>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        data-testid="show-2nd-banner"
        type="button"
      >
        Toggle Notification Banner
      </button>
    </div>
  </div>
</div>
`;

exports[`useNotificationBanners Nested Notification Banner Provider unregisters banner with top-level Banner Provider 2`] = `
<div>
  <div>
    <button
      data-testid="show-banner"
      type="button"
    >
      Toggle Notification Banner
    </button>
    <div
      aria-live="polite"
    >
      <div
        class="alert-base error narrow"
        data-terra-application-notification-banner="error"
        role="alert"
      >
        <div
          class="body body-std"
        >
          <span
            class="icon"
          >
            <svg
              aria-hidden="true"
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </span>
          <div
            class="section"
          >
            <strong
              class="title"
            >
              <span>
                Error.
              </span>
            </strong>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        data-testid="show-2nd-banner"
        type="button"
      >
        Toggle Notification Banner
      </button>
    </div>
  </div>
</div>
`;

exports[`useNotificationBanners Nested Notification Banner Provider unregisters banner with top-level Banner Provider 3`] = `
<div>
  <div>
    <button
      data-testid="show-banner"
      type="button"
    >
      Toggle Notification Banner
    </button>
    <div>
      <button
        data-testid="show-2nd-banner"
        type="button"
      >
        Toggle Notification Banner
      </button>
    </div>
  </div>
</div>
`;

exports[`useNotificationBanners NotificationBannerProvider.registerNotificationBanner registers banner when rendered after mount 1`] = `
<div>
  <div>
    <button
      data-testid="show-banner"
      type="button"
    >
      Toggle Notification Banner
    </button>
  </div>
</div>
`;

exports[`useNotificationBanners NotificationBannerProvider.registerNotificationBanner registers banner when rendered after mount 2`] = `
<div>
  <div
    aria-live="polite"
  >
    <div
      class="alert-base error narrow"
      data-terra-application-notification-banner="error"
      role="alert"
    >
      <div
        class="body body-std"
      >
        <span
          class="icon"
        >
          <svg
            aria-hidden="true"
            class="tui-Icon icon IconError"
            focusable="false"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
              fill="#E50000"
            />
            <path
              d="M7 21.5h34v5H7v-5z"
              fill="#FFF"
            />
          </svg>
        </span>
        <div
          class="section"
        >
          <strong
            class="title"
          >
            <span>
              Error.
            </span>
          </strong>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      data-testid="show-banner"
      type="button"
    >
      Toggle Notification Banner
    </button>
  </div>
</div>
`;

exports[`useNotificationBanners NotificationBannerProvider.unregisterNotificationBanner unregisters notification banner when id is provided 1`] = `
<div>
  <div
    aria-live="polite"
  >
    <div
      class="alert-base error narrow"
      data-terra-application-notification-banner="error"
      role="alert"
    >
      <div
        class="body body-std"
      >
        <span
          class="icon"
        >
          <svg
            aria-hidden="true"
            class="tui-Icon icon IconError"
            focusable="false"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
              fill="#E50000"
            />
            <path
              d="M7 21.5h34v5H7v-5z"
              fill="#FFF"
            />
          </svg>
        </span>
        <div
          class="section"
        >
          <strong
            class="title"
          >
            <span>
              Error.
            </span>
          </strong>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      data-testid="show-banner"
      type="button"
    >
      Toggle Notification Banner
    </button>
  </div>
</div>
`;

exports[`useNotificationBanners NotificationBannerProvider.unregisterNotificationBanner unregisters notification banner when id is provided 2`] = `
<div>
  <div>
    <button
      data-testid="show-banner"
      type="button"
    >
      Toggle Notification Banner
    </button>
  </div>
</div>
`;

exports[`useNotificationBanners renders with children 1`] = `<div />`;

exports[`useNotificationBanners renders with children 2`] = `
<div>
  <div>
    child
  </div>
</div>
`;

exports[`useNotificationBanners renders with children that has a an banner 1`] = `
<div>
  <div
    aria-live="polite"
  >
    <div
      class="alert-base error narrow"
      data-terra-application-notification-banner="error"
      role="alert"
    >
      <div
        class="body body-std"
      >
        <span
          class="icon"
        >
          <svg
            aria-hidden="true"
            class="tui-Icon icon IconError"
            focusable="false"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
              fill="#E50000"
            />
            <path
              d="M7 21.5h34v5H7v-5z"
              fill="#FFF"
            />
          </svg>
        </span>
        <div
          class="section"
        >
          <strong
            class="title"
          >
            <span>
              Error.
            </span>
          </strong>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      data-testid="show-banner"
      type="button"
    >
      Toggle Notification Banner
    </button>
  </div>
</div>
`;
